WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88471
DFG arguments access slow path should not crash if the arguments haven't been created
https://bugs.webkit.org/show_bug.cgi?id=88471
Summary
DFG arguments access slow path should not crash if the arguments haven't been...
Filip Pizlo
Reported
2012-06-06 16:59:22 PDT
since it might be called due to out-of-bounds access. Patch forthcoming.
Attachments
the patch
(190.36 KB, patch)
2012-06-06 17:01 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-06-06 17:01:29 PDT
Created
attachment 146149
[details]
the patch
WebKit Review Bot
Comment 2
2012-06-06 17:05:39 PDT
Attachment 146149
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/JavaScriptCore/dfg/DFGOperations.h:80: DFG_OPERATION is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2012-06-06 17:23:55 PDT
Landed in
http://trac.webkit.org/changeset/119647
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug