DFG arguments access slow path should not crash if the arguments haven't been created https://bugs.webkit.org/show_bug.cgi?id=88471

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

* dfg/DFGCCallHelpers.h:
(JSC::DFG::CCallHelpers::setupArgumentsWithExecState):
(CCallHelpers):
* dfg/DFGOperations.cpp:
* dfg/DFGOperations.h:
* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::callOperation):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

LayoutTests:

* fast/js/dfg-arguments-out-of-bounds-expected.txt: Added.
* fast/js/dfg-arguments-out-of-bounds.html: Added.
* fast/js/dfg-inline-arguments-out-of-bounds-expected.txt: Added.
* fast/js/dfg-inline-arguments-out-of-bounds.html: Added.
* fast/js/script-tests/dfg-arguments-out-of-bounds.js: Added.
(foo.bar):
(foo):
* fast/js/script-tests/dfg-inline-arguments-out-of-bounds.js: Added.
(foo):
(bar):



Canonical link: https://commits.webkit.org/106288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119647 268f45cc-cd09-0410-ab3c-d52691b4dbfc